Bug 169723 - [jsc][mips] Fix compilation error introduced in r213652
Summary: [jsc][mips] Fix compilation error introduced in r213652
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: Other
Hardware: Other Linux
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-15 17:15 PDT by Guillaume Emont
Modified: 2017-03-15 18:01 PDT (History)
8 users (show)

See Also:


Attachments
Patch (1.67 KB, patch)
2017-03-15 17:19 PDT, Guillaume Emont
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Guillaume Emont 2017-03-15 17:15:55 PDT
The new replaceWithBkpt() contains a lapsus in it (s/code/instructionStart) and won't compile.
Comment 1 Guillaume Emont 2017-03-15 17:19:27 PDT
Created attachment 304586 [details]
Patch

The patch.
Comment 2 Mark Lam 2017-03-15 17:32:21 PDT
Comment on attachment 304586 [details]
Patch

r=me
Comment 3 WebKit Commit Bot 2017-03-15 18:01:48 PDT
Comment on attachment 304586 [details]
Patch

Clearing flags on attachment: 304586

Committed r214022: <http://trac.webkit.org/changeset/214022>
Comment 4 WebKit Commit Bot 2017-03-15 18:01:54 PDT
All reviewed patches have been landed.  Closing bug.