[jsc][mips] Fix compilation error introduced in r213652 https://bugs.webkit.org/show_bug.cgi?id=169723

Patch by Guillaume Emont <guijemont@igalia.com> on 2017-03-15
Reviewed by Mark Lam.

The new replaceWithBkpt() contains a lapsus in it
(s/code/instructionStart) and won't compile.

* assembler/MIPSAssembler.h:
(JSC::MIPSAssembler::replaceWithBkpt):

Canonical link: https://commits.webkit.org/186694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214022 268f45cc-cd09-0410-ab3c-d52691b4dbfc